fix horizontal overflow on home view

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,8 +23,8 @@
 	font-family: poppinsRegular;
 }
 
-.body{
-	overflow-x: hidden;
+body{
+	overflow-x: hidden !important;
 }
 
 .homeWrapper {
